@@ -42,57 +42,95 @@ Synopsis
 xdg-mime [--help] [--info FILE] [--defapp FILE]
 
 _USAGE
-    exit 1
 }
-
-info_kde()
-{
-    kfile "$1" 2> /dev/null | cut -d "(" -f 2 | cut -d ")" -f 1
-
-    exit 0
-}
-
-info_gnome()
-{
-    gnomevfs-info "$1" 2> /dev/null | grep MIME | cut -d ":" -f 2 | sed s/"^ "//
-
-    exit 0
-}
-
-info_generic()
-{
-    /usr/bin/file -i "$1" 2> /dev/null | cut -d ":" -f 2 | sed s/"^ "//
-
-    exit 0
-}
-
-defapp_kde()
-{
-    MIME=`kfile "$1" 2> /dev/null | cut -d "(" -f 2 | cut -d ")" -f 1`
-
-    if [ x"$MIME" != x"" ]; then
-        ktradertest "$MIME" Application 2>/dev/null | grep DesktopEntryPath \
-            | head -n 1 | cut -d ':' -f 2 | cut -d \' -f 2 | xargs basename
-        exit 0
-    else
-        exit 3;
-    fi
-}
-
-defapp_gnome()
-{
-    gnomevfs-info "$1" 2> /dev/null | grep "Default app" | cut -d ":" -f 2 \
-        | cut -d " " -f 2
-}
-
-[ x"$1" != x"" ] || usage
-[ x"$1" != x"--help" ] || usage
 
 #@xdg-utils-common@
 
 #----------------------------------------------------------------------------
 #   Common utility functions included in all XDG wrapper scripts
 #----------------------------------------------------------------------------
+
+#-------------------------------------------------------------
+# Exit script on successfully completing the desired operation
+
+exit_success()
+{
+    if [ $# -gt 0 ]; then
+        echo "$@"
+        echo
+    fi
+
+    exit 0
+}
+
+
+#-----------------------------------------
+# Exit script on wrong number of arguments
+# prints usage information
+
+exit_failure_arg_count()
+{
+    if [ $# -gt 0 ]; then
+        echo "$@"
+        echo
+    fi
+
+    usage
+
+    exit 1
+}
+
+
+#-----------------------------------
+# Exit script on malformed arguments
+# prints usage information
+
+exit_failure_arg_malformed()
+{
+    if [ $# -gt 0 ]; then
+        echo "$@"
+        echo
+    fi
+
+    usage
+
+    exit 2
+}
+
+#-------------------------------------------------------------
+# Exit script on failure to locate necessary tool applications
+
+exit_failure_operation_impossible()
+{
+    if [ $# -gt 0 ]; then
+        echo "$@"
+        echo
+    fi
+
+    usage
+
+    exit 3
+}
+
+#-------------------------------------------------------------
+# Exit script on failure returned by a tool application
+
+exit_failure_operation_failed()
+{
+    if [ $# -gt 0 ]; then
+        echo "$@"
+        echo
+    fi
+
+    usage
+
+    exit 4
+}
+
+#--------------------------------------
+# Checks for known desktop environments
+# set variable DE to the desktop environments name, lowercase
+
 detectDE()
 {
     if [ x"$KDE_FULL_SESSION" = x"true" ]; then DE=kde;
@@ -107,9 +145,57 @@ detectDE
 
 
 
-if [ x"$1" = x"--info" ]; then
+info_kde()
+{
+    kfile "$1" 2> /dev/null | cut -d "(" -f 2 | cut -d ")" -f 1
+
+    exit_success
+}
+
+info_gnome()
+{
+    gnomevfs-info "$1" 2> /dev/null | grep MIME | cut -d ":" -f 2 | sed s/"^ "//
+
+    exit_success
+}
+
+info_generic()
+{
+    /usr/bin/file -i "$1" 2> /dev/null | cut -d ":" -f 2 | sed s/"^ "//
+
+    exit_success
+}
+
+defapp_kde()
+{
+    MIME=`kfile "$1" 2> /dev/null | cut -d "(" -f 2 | cut -d ")" -f 1`
+
+    if [ x"$MIME" != x"" ]; then
+        ktradertest "$MIME" Application 2>/dev/null | grep DesktopEntryPath \
+            | head -n 1 | cut -d ':' -f 2 | cut -d \' -f 2 | xargs basename
+        exit_success
+    else
+        exit_failure_operation_failed
+    fi
+}
+
+defapp_gnome()
+{
+    gnomevfs-info "$1" 2> /dev/null | grep "Default app" | cut -d ":" -f 2 \
+        | cut -d " " -f 2
+
+    exit_success
+}
+
+[ x"$1" != x"" ] || exit_failure_arg_count
+
+
+if [ x"$1" = x"--help" ]; then
+    usage
+    exit_success
+elif [ x"$1" = x"--info" ]; then
     shift
-    [ x"$1" != x"" ] || usage
+    [ x"$1" != x"" ] || exit_failure_arg_count
 
     if [ x"$DE" = x"" ]; then
         if [ -x /usr/bin/file ]; then
@@ -131,13 +217,12 @@ if [ x"$1" = x"--info" ]; then
         ;;
 
         *)
-        echo Sorry, no method available for quering MIME type of "$1"
-        exit 2
+        exit_failure_operation_impossible "Sorry, no method available for quering MIME type of" "$1"
         ;;
     esac
 elif [ x"$1" = x"--defapp" ]; then
     shift
-    [ x"$1" != x"" ] || usage
+    [ x"$1" != x"" ] || exit_failure_arg_count
 
     case "$DE" in
         kde)
@@ -149,10 +234,9 @@ elif [ x"$1" = x"--defapp" ]; then
         ;;
 
         *)
-        echo Sorry, no method available for quering default application for file "$1"
-        exit 2
+        exit_failure_operation_impossible "Sorry, no method available for quering default application for file" "$1"
         ;;
     esac
 else
-    usage
+    exit_failure_arg_malformed "Unkown command" "$1"
 fi
